Fixed splash page width on smaller screens

--- a/dnd-frontend/src/app/home/home.component.css
+++ b/dnd-frontend/src/app/home/home.component.css
@@ -9,6 +9,7 @@
     margin: auto;
     background-color: #2F323B;
     width: 20%;
+    min-width: 300px;
     height: 40%;
     padding: 15px;
     border-radius: 10px;
